--- a/index.html
+++ b/index.html
@@ -1,5 +1,78 @@
 <html>
   <head>
+	<style type="text/css">
+	  body {
+	  background: #f2f2f2;
+	  box-sizing: border-box;
+	  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+	  font-weight: 300;
+	  }
+
+	  #sidebar {
+	  float:left;
+	  width: 250px;
+	  }
+
+	  #workspace {
+	  margin-left: 250px;
+
+	  border-left: solid black 1px;
+	  }
+
+	  .panel {
+	  margin: 20px;
+	  padding: 10px;
+	  background: white;
+	  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.2);
+	  }
+
+	  .panel .toolbar {
+	  float: right;
+	  display: none;
+	  }
+
+	  .panel:hover .toolbar {
+	  display: block;
+	  margin: 15px 5px;
+	  }
+
+	  .panel .toolbar-item {
+	  padding: 0.8em;
+	  color: white;
+	  background: #3f51b5;
+	  cursor: hand;
+	  font-size: 75%;
+	  text-transform: uppercase;
+	  font-weight: bold;
+	  }
+	  
+	  .panel .toolbar-item:hover {
+	  background: #337ab7;
+	  }
+
+	  .panel h1 {
+	  margin-top: 10px;
+	  font-size: 30px;
+	  font-weight: normal;
+	  }
+
+	  .panel .tags {
+	  margin-top: 15px;
+	  margin-bottom: 5px;
+	  }
+
+	  .panel .tag {
+	  background-color: #009688;
+	  padding: .5em .8em;
+	  font-size: 75%;
+	  line-height: 1;
+	  color: white;
+	  display: inline;
+	  text-align: center;
+	  white-space: nowrap;
+	  vertical-align: baseline;
+	  }
+	</style>
 	<script type="text/javascript" src="d3.js"></script>
 	<script type="text/javascript" src="schema.js"></script>
 	<script type="text/javascript" src="view.js"></script>
@@ -17,7 +90,45 @@
 	  sv.render(d3.select('div#workspace').node());
 	  
 	</script>
+
+
+	<div id="sidebar">
+	  <h1 style="font-family: monospace">ScalarData</h1>
+	  <p>Version 1</p>
+	</div>
+	<div id="workspace">
+	  <div class="panel">
+		<div class="toolbar">
+		  <span class="toolbar-item">Edit</span><span class="toolbar-item">Close</span>
+		</div>
+		<h1 style="font-family: 'Helvetica','Courier'">Panel title</h1>
+		Panel content
+
+		<div class="tags">
+		  <span class="tag">Tagged</span>
+		  <span class="tag">Tag 2</span>
+		  <span class="tag">Another tag</span>
+		</div>
+	  </div>
+
+
+
+	  <div class="panel">
+		<div class="toolbar">
+		  <span class="toolbar-item">Edit</span><span class="toolbar-item">Close</span>
+		</div>
+		<h1 style="font-family: 'Helvetica','Courier'">Panel title</h1>
+		Panel content
+
+		<div class="tags">
+		  <span class="tag">Tagged</span>
+		  <span class="tag">Tag 2</span>
+		  <span class="tag">Another tag</span>
+		</div>
+	  </div>
+	</div>
 	
   </body>
 </html>
+
  
