--- a/index.html
+++ b/index.html
@@ -29,27 +29,61 @@
 	  .panel .toolbar {
 	  float: right;
 	  display: none;
+	  position: relative;
+	  }
+
+	  .toolbar * {
+	  margin: 0px 3px;
 	  }
 
 	  .panel:hover .toolbar {
-	  display: block;
-	  margin: 15px 5px;
+	  display: inline-block;
 	  }
 
-	  .panel .toolbar-item {
-	  padding: 0.8em;
-	  color: white;
-	  background: #3f51b5;
-	  cursor: hand;
-	  font-size: 75%;
-	  text-transform: uppercase;
-	  font-weight: bold;
+	  button, select, input {
+	  border:none;
+	  border-radius: 2px;
+	  position: relative;
+	  /* font-size: 14px; */
+	  font-size: inherit;
+	  font-weight: 500;
+	  letter-spacing: 0;
+	  white-space: nowrap;
+	  vertical-align: middle;
 	  }
 	  
-	  .panel .toolbar-item:hover {
-	  background: #337ab7;
+
+	  button {
+	  padding: 8px 30px;
+	  cursor: pointer;
+	  text-transform: uppercase;
 	  }
 
+	  button.small {
+	  padding: 5px 20px;
+	  font-size: 12px;
+	  }
+
+	  select {
+	    padding: 8px 30px;
+	  }
+	  
+	  input {
+	  outline: none;
+	  border-bottom: solid 1px #D2D2D2;
+	  padding: 8px 0px;
+	  margin: 10px 0px;
+	  }
+
+	  input:focus {
+	    border-bottom: solid 1px #828282;
+	  }
+
+	  input.name-editor {
+	  font-size: 30px;
+	  font-weight: normal;
+	  }
+	  
 	  .panel h1 {
 	  margin-top: 10px;
 	  font-size: 30px;
@@ -62,35 +96,55 @@
 	  }
 
 	  .panel .tag {
-	  background-color: #009688;
+	  background-color: #E1ECF4;
 	  padding: .5em .8em;
 	  font-size: 75%;
 	  line-height: 1;
-	  color: white;
+	  color: #39739D;
 	  display: inline;
 	  text-align: center;
 	  white-space: nowrap;
 	  vertical-align: baseline;
 	  }
+
+	  /* Attribute editors */
+	  div.attribute {
+	  margin: 10px 0px;
+	  padding: 5px 0px;
+	  border-top: solid 1px black;
+	  }
+	  .attribute-name {
+	  display: inline-block;
+	  width: 250px;
+	  margin: 0px;
+	  vertical-align: top;
+	  }
+	  .attribute-value {
+	  display: inline-block;
+	  }
+
+	  input[type=checkbox] {
+	  display: inline-block;
+	  margin: 10px 0px;
+	  width: 1.2em;
+	  height: 1.2em;
+	  margin-right: 10px;
+	  }
+
+	  .attribute-ctrl * {
+	    margin-right: 3px;
+	  }
+	  
+	  .attribute-name input[type=text] {
+	  font-size: 120%;
+	  }
+
 	</style>
 	<script type="text/javascript" src="d3.js"></script>
 	<script type="text/javascript" src="schema.js"></script>
 	<script type="text/javascript" src="view.js"></script>
   </head>
   <body>
-
-	<div id="workspace"></div>
-
-	<script type="text/javascript">
-	  // A schema of a single integer
-	  var s = Schema.fromJSON([['Schema/Integer', 'A number']]);
-
-	  // Render the schema
-	  var sv = new SchemaView(s);
-	  sv.render(d3.select('div#workspace').node());
-	  
-	</script>
-
 
 	<div id="sidebar">
 	  <h1 style="font-family: monospace">ScalarData</h1>
@@ -127,7 +181,17 @@
 		</div>
 	  </div>
 	</div>
-	
+
+	<script type="text/javascript">
+	  // A schema of a single integer
+	  var s = new Schema(['First schema', ['genesis'], [['Schema/Number', 'First number', true]]]);
+
+	  // Render the schema
+	  var sv = new SchemaView(s);
+	  sv.render(document.getElementById('workspace'));
+	  
+	</script>
+
   </body>
 </html>
 
