--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	  body {
 		background: #f2f2f2;
 	  }
+	  .card {
+	    margin: 10px;
+	  }
 	</style>
 	<script type="text/javascript" src="d3.js"></script>
 	<script type="text/javascript" src="schema.js"></script>
@@ -23,7 +26,7 @@
 
 	<script type="text/javascript">
 	  // A schema of a single integer
-	  var s = new Schema(['First schema', ['genesis'], [['Schema/Number', 'First number', true]]]);
+	  var s = new Schema(['First schema', ['genesis'], [['Schema/Number', 'First number', true],['Schema/Location', 'Place', 0]]]);
 
 	  // Render the schema
 	  var sv = new SchemaView(s);
