More refinement of views

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 	  .card {
 	    margin: 10px;
 	  }
+	  .width-medium {
+	    max-width: 500px;
+	  }
+	  .dropzone {
+	  border: medium dashed gray;
+	  font-size: 24px;
+	  text-align: center;
+	  line-height: 120px;
+	  vertical-align: middle;
+	  }
 	</style>
 	<script type="text/javascript" src="d3.js"></script>
 	<script type="text/javascript" src="schema.js"></script>
