Initial Ids for schema items. Needs better implementation.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	<script type="text/javascript">
 	  // A schema of a single integer
-	  var s = new Schema(['First schema', ['genesis'], [['Schema/Number', 'First number', true],['Schema/Location', 'Place', 0]]]);
+	  var s = new Schema(['First schema', ['genesis'], [['Schema/Number', 's10', 'First number', true],['Schema/Location', 's11', 'Place', 0]]]);
 
 	  // Render the schema
 	  var sv = new SchemaView(s);
