Initial state is empty, export tested and working.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	  }
 	</style>
 	<script type="text/javascript">
-	  window.data = [20, [2, [[1, 'First schema', ['genesis'], [['Schema/Number', 10, 'First number', true],['Schema/Location', 11, 'Place', 0]]]]]];
+	  window.data = undefined;
 	</script>
 	<script type="text/javascript" src="d3.js"></script>
 	<script type="text/javascript" src="event.js"></script>
