Initial datasource and view

--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
 	    line-height: 120px;
 	    vertical-align: middle;
 	  }
+	  
+	  .portal {
+	  position: absolute;
+	  overflow: hidden;
+	  display: block;
+	  background: #f8f9fa;
+	  }
+	  .portal span {
+	  display: inline-block;
+	  }
+	  .portal-row {
+	  position: absolute;
+	  width: 100%;
+	  padding-left: 5px;
+	  }
 	</style>
 	<script type="text/javascript">
 	  window.data = undefined;
