Implementation of types (attributes lists) and initial CSV parsing.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 	<script type="text/javascript" src="schemas.js"></script>
 	<script type="text/javascript" src="schemasview.js"></script>
 	<script type="text/javascript" src="scalardata.js"></script>
+	<script type="text/javascript" src="types.js"></script>
 	<script type="text/javascript" src="schema.js"></script>
-	<script type="text/javascript" src="view.js"></script>
+	<script type="text/javascript" src="schemaview.js"></script>
   </head>
   <body>
 	<div class="container">
