Reading and parsing CSV to create datasources. Needs testing and some cleanup around displaying the datasource table.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 	  display: block;
 	  background: #f8f9fa;
 	  }
+	  .portal-hdr span {
+	  display: inline-block;
+	  }
 	  .portal span {
 	  display: inline-block;
 	  }
@@ -43,6 +46,8 @@
 	<script type="text/javascript" src="d3.js"></script>
 	<script type="text/javascript" src="event.js"></script>
 	<script type="text/javascript" src="workspace.js"></script>
+	<script type="text/javascript" src="datasource.js"></script>
+	<script type="text/javascript" src="datasourceview.js"></script>
 	<script type="text/javascript" src="schemas.js"></script>
 	<script type="text/javascript" src="schemasview.js"></script>
 	<script type="text/javascript" src="scalardata.js"></script>
